--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,19 +31,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageButton
+        <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/btnLogin"
             android:layout_weight="1"
-            android:src="@drawable/login" />
+            android:src="@drawable/login"
+            android:text="Login" />
 
-        <ImageButton
+        <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/btnSobre"
             android:layout_weight="1.00"
-            android:src="@drawable/sobre" />
+            android:src="@drawable/sobre"
+            android:text="Sobre" />
     </LinearLayout>
 
     <TextView
