--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/edtLogin"
         android:layout_gravity="center_horizontal"
-        android:hint="@string/edtLogin"
+        android:hint="Usuário"
         android:inputType="text"
         />
 
@@ -24,7 +24,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/edtSenha"
-        android:hint="@string/edtSenha" />
+        android:hint="Senha" />
 
     <LinearLayout
         android:orientation="horizontal"
